# t-trade

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  start.bat  start.py  start.sh  test_api_check.py  trade-principles.txt
config/: calendar.yaml  params.yaml  symbols.yaml
data/db/: .gitkeep
data/raw/: .gitkeep
data/reports/: .gitkeep
docs/: ROADMAP.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  types.ts
logs/: .gitkeep
src/tbot/: __init__.py  main.py  settings.py
src/tbot/api/: __init__.py  main.py  watchlist.py
src/tbot/brokers/: __init__.py  ibkr_client.py
src/tbot/datafeed/: __init__.py  bar_aggregator.py  store.py
src/tbot/engine/: __init__.py  engine.py  risk_gate.py  signal_generator.py  state.py
src/tbot/indicators/: __init__.py  ma20.py  opening_range.py  vwap.py
src/tbot/regime/: __init__.py  features.py  rules.py
src/tbot/report/: __init__.py  daily_report.py  notifier.py
src/tbot/services/: __init__.py  news_event_detector.py  tws_data_service.py
src/tbot/utils/: __init__.py  logging.py  math.py  time.py
tests/: conftest.py  test_backend_api.py  test_opening_range.py  test_regime_rules.py  test_trading_engine.py  test_vwap.py  test_yahoo_api.py  test_yahoo_api_v2.py
